--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,21 +17,7 @@ comments: true
     <a href="/tags.html#{{ tag }}" title="{{ tag }}">#{{ tag }}</a>
     {% endfor %}
   </span>
-  <!-- BEGIN this would not work on any other domain -->
-  <span
-    class           = "like-wrapper"
-    like-shortname  = '{{ site.disqus }}'
-    like-identifier = '{{ page.guid }}'
-    like-name       = '{{ page.title }}'
-    like-btn        = '&#xf087;'
-    like-link       = '{{ site.atom-baseurl }}{{ page.url }}'
-    ></span>
-  <script type="text/javascript">
-    var l = document.createElement('script');
-    l.type = 'text/javascript'; l.async = true; l.src = 'http://www.like-btn.com/javascript/widget.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(l);
-  </script>
-  <!-- END this would not work on any other domain -->
+ 
   {% endif %}
   </section>
   <section class="post">
@@ -46,10 +32,10 @@ comments: true
     <i class="fa fa-circle"></i>
     {% endif %}
     </span>
-    <!-- BEGIN comment icon
+ 
     <span><a href="javascript:leave_comment();" id="leave_comment_link"><i class="fa fa-comment-o"></i></a></span>
     <span><a href="javascript:collapse_comment();" id="collapse_comment_link" style="display:none;"><i class="fa fa-chevron-up"></i></a></span>
-      END comment icon -->
+
 
     <span>
     {% if page.next %}
@@ -60,28 +46,6 @@ comments: true
     </span>
   </div>
 
-<!-- BEGIN comment  
-<div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://yulin-me.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-END comment -->
 
   <section class="comment">
   <div id="disqus_thread"></div>
@@ -91,7 +55,7 @@ END comment -->
 
       function leave_comment() {
           var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          dsq.src = 'http://yulin-me..disqus.com/embed.js';
+          dsq.src = 'http://yulin-me.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
           $("#leave_comment_link").css("display", "none");
           $("#collapse_comment_link").css("display", "");
