--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-comments: true
+Comments: ture
 ---
 
 <article>
@@ -72,6 +72,7 @@ comments: true
   </script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </section>
+
 
   {% endif %}
 </article>
